Second try to fix the camera's chaotic behaviour and small refactors